force-app/main/default/objects/Diagnostic__c/Diagnostic__c.object-meta.xml
<CustomObject>
    <label>Diagnostic</label>
    <nameField>
        <displayFormat>DI-{00000}</displayFormat>
        <label>Diagnostic Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diagnostics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>