force-app/main/default/objects/Diagnostic__c/fields/Animal_Exam_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Animal_Exam_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal Exam Sheet</label>
    <referenceTo>Animal_Exam_Sheet__c</referenceTo>
    <relationshipLabel>Diagnostics</relationshipLabel>
    <relationshipName>Diagnostics</relationshipName>
    <type>Lookup</type>
</CustomField>