force-app/main/default/objects/Diagnostic__c/fields/Forensic_Notes__c.field-meta.xml
<CustomField>
    <fullName>Forensic_Notes__c</fullName>
    <label>Forensic Notes</label>
    <type>TextArea</type>
</CustomField>