force-app/main/default/objects/Diagnostic__c/fields/Forensics_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Forensics_Due_Date__c</fullName>
    <label>Forensics Due Date</label>
    <type>Date</type>
</CustomField>