force-app/main/default/objects/Diagnostic__c/fields/Include_in_discharge__c.field-meta.xml
<CustomField>
    <fullName>Include_in_discharge__c</fullName>
    <defaultValue>&apos;Yes&apos;</defaultValue>
    <inlineHelpText>All but &quot;Anabolic steroid testing&quot; included by default.</inlineHelpText>
    <label>Include in discharge?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>