force-app/main/default/objects/Diagnostic__c/fields/Necropsy__c.field-meta.xml
<CustomField>
    <fullName>Necropsy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Necropsy</label>
    <referenceTo>Evidence__c</referenceTo>
    <relationshipLabel>Diagnostics</relationshipLabel>
    <relationshipName>Diagnostics</relationshipName>
    <type>Lookup</type>
</CustomField>