force-app/main/default/objects/Diagnostic__c/fields/Test_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Name__c</fullName>
    <label>Test Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fecal OP</fullName>
            </value>
            <value>
                <fullName>CBC</fullName>
            </value>
            <value>
                <fullName>Chem</fullName>
            </value>
            <value>
                <fullName>Witness Pregnancy</fullName>
            </value>
            <value>
                <fullName>Heartworm</fullName>
            </value>
            <value>
                <fullName>Anaplasma</fullName>
            </value>
            <value>
                <fullName>Lyme</fullName>
            </value>
            <value>
                <fullName>Ehrlichia</fullName>
            </value>
            <value>
                <fullName>Microfilaria</fullName>
            </value>
            <value>
                <fullName>Ear Cytology</fullName>
            </value>
            <value>
                <fullName>ACTH Stim</fullName>
            </value>
            <value>
                <fullName>Anabolic Steroid Testing</fullName>
            </value>
            <value>
                <fullName>Avian Influenza PCR</fullName>
            </value>
            <value>
                <fullName>Babesia</fullName>
            </value>
            <value>
                <fullName>Blood Glucose</fullName>
            </value>
            <value>
                <fullName>Blood Pressure</fullName>
            </value>
            <value>
                <fullName>Bronchitis PCR</fullName>
            </value>
            <value>
                <fullName>Canine GI Panel</fullName>
            </value>
            <value>
                <fullName>Coggins (EIA)</fullName>
            </value>
            <value>
                <fullName>Cortisol/Creatinine Ratio</fullName>
            </value>
            <value>
                <fullName>Culture &amp; Sensitivity</fullName>
            </value>
            <value>
                <fullName>Diarrhea PCR</fullName>
            </value>
            <value>
                <fullName>Ear Swab for Mites</fullName>
            </value>
            <value>
                <fullName>FeLV</fullName>
            </value>
            <value>
                <fullName>FIV</fullName>
            </value>
            <value>
                <fullName>Fluorescein Stain</fullName>
            </value>
            <value>
                <fullName>FNA</fullName>
            </value>
            <value>
                <fullName>Fructosamine</fullName>
            </value>
            <value>
                <fullName>Fungal Culture</fullName>
            </value>
            <value>
                <fullName>Giardia SNAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>