force-app/main/default/objects/Diagnostic__c/fields/Test_Notes__c.field-meta.xml
<CustomField>
    <fullName>Test_Notes__c</fullName>
    <label>Test Notes</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>