force-app/main/default/objects/Diagnostic__c/fields/Test_Performed__c.field-meta.xml
<CustomField>
    <fullName>Test_Performed__c</fullName>
    <label>Test Performed</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Test_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>Idexx</fullName>
            </value>
            <value>
                <fullName>Antech</fullName>
            </value>
            <value>
                <fullName>NCSU VBDDL</fullName>
            </value>
            <value>
                <fullName>Arkansas VDL</fullName>
            </value>
            <value>
                <fullName>Cornell</fullName>
            </value>
            <value>
                <fullName>UF Racing Lab</fullName>
            </value>
            <value>
                <fullName>Done at offsite clinic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>