force-app/main/default/objects/Diagnostic__c/fields/Test_Results__c.field-meta.xml
<CustomField>
    <fullName>Test_Results__c</fullName>
    <label>Test Results</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Test_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abnormal</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Suspicious</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Ready for Review</fullName>
            </value>
            <value>
                <fullName>Done at offsite clinic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>